2014-08-05  Andy Buckley  <andy.buckley@cern.ch>

	* Update all analyses to use the xMin/Max/Mid, xMean, xWidth,
	etc. methods on YODA classes rather than the deprecated lowEdge
	etc.

	* Merge new HasPID functor from Holger Schulz into
	Rivet/Tools/ParticleUtils.hh, mainly for use with the any()
	function in Rivet/Tools/Utils.hh

2014-08-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add ghost tagging of charms, bottoms and taus to FastJets, and
	tag info accessors to Jet.

	* Add constructors from and cast operators to FastJet's PseudoJet
	object from Particle and Jet.

	* Convert inRange to not use fuzzy comparisons on closed
	intervals, providing old version as fuzzyInRange.

2014-07-30  Andy Buckley  <andy.buckley@cern.ch>

	* Remove classifier functions accepting a Particle from the PID
	inner namespace.

2014-07-29  Andy Buckley  <andy.buckley@cern.ch>

	* MC_JetAnalysis.cc: re-enable +- ratios for eta and y, now that
	YODA divide doesn't throw an exception.

	* ATLAS_2012_I1093734: fix a loop index error which led to the
	first bin value being unfilled for half the dphi plots.

	* Fix accidental passing of a GenParticle pointer as a PID code
	int in HeavyHadrons.cc. Effect limited to incorrect deductions
	about excited HF decay chains and should be small. Thanks to
	Tomasz Przedzinski for finding and reporting the issue during
	HepMC3 design work!

2014-07-23  Andy Buckley  <andy.buckley@cern.ch>

	* Fix to logspace: make sure that start and end values are exact,
	not the result of exp(log(x)).

2014-07-16  Andy Buckley  <andy.buckley@cern.ch>

	* Fix setting of library paths for doc building: Python can't
	influence the dynamic loader in its own process by setting an
	environment variable because the loader only looks at the variable
	once, when it starts.

2014-07-02  Andy Buckley  <andy.buckley@cern.ch>

	* rivet-cmphistos now uses the generic yoda.read() function rather
	than readYODA() -- AIDA files can also be compared and plotted
	directly now.
