@@ -1,0 +1,49 @@
+# BEGIN PLOT /MC_HFJETS/pt.*
+LogY=1
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/.*frac.*
+LogY=0
+# END PLOT
+
+
+# BEGIN PLOT /MC_HFJETS/ptBHadrLead
+Title=$p_\perp$ of $b$ hadron in leading $b$ jet
+XLabel=$p_\perp^b$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/ptBJetLead
+Title=$p_\perp$ of leading $b$ jet
+XLabel=$p_\perp^{b\,\text{jet}}$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/ptCHadrLead
+Title=$p_\perp$ of $c$ hadron in leading $c$ jet
+XLabel=$p_\perp^c$ [GeV]
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/ptCJetLead
+Title=$p_\perp$ of leading $c$ jet
+XLabel=$p_\perp^{c\,\text{jet}}$ [GeV]
+# END PLOT
+
+
+# BEGIN PLOT /MC_HFJETS/ptfracB
+Title=$p_\perp$ fraction of $b$ hadron in leading $b$ jet
+XLabel=$p_\perp^b / p_\perp^{b\,\text{jet}}$
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/ptfracC
+Title=$p_\perp$ fraction of $c$ hadron in leading $c$ jet
+XLabel=$p_\perp^c / p_\perp^{c\,\text{jet}}$
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/efracB
+Title=Energy fraction of $b$ hadron in leading $b$ jet
+XLabel=$E^b / E^{b\,\text{jet}}$
+# END PLOT
+
+# BEGIN PLOT /MC_HFJETS/efracC
+Title=Energy fraction of $c$ hadron in leading $c$ jet
+XLabel=$E^c / E^{c\,\text{jet}}$
+# END PLOT
