@@ -1,0 +1,31 @@
+# BEGIN PLOT /MC_JETTAGS/numBTagsPer04Jet
+Title=Number of $b$ hadron tags per $R=0.4$ jet
+XLabel=$N_{b\,\text{tag}}$
+# END PLOT
+
+# BEGIN PLOT /MC_JETTAGS/numBTagsPer06Jet
+Title=Number of $b$ hadron tags per $R=0.6$ jet
+XLabel=$N_{b\,\text{tag}}$
+# END PLOT
+
+
+# BEGIN PLOT /MC_JETTAGS/numCTagsPer04Jet
+Title=Number of $c$ hadron tags per $R=0.4$ jet
+XLabel=$N_{c\,\text{tag}}$
+# END PLOT
+
+# BEGIN PLOT /MC_JETTAGS/numCTagsPer06Jet
+Title=Number of $c$ hadron tags per $R=0.6$ jet
+XLabel=$N_{c\,\text{tag}}$
+# END PLOT
+
+
+# BEGIN PLOT /MC_JETTAGS/numTauTagsPer04Jet
+Title=Number of $\tau$ tags per $R=0.4$ jet
+XLabel=$N_{\tau\,\text{tag}}$
+# END PLOT
+
+# BEGIN PLOT /MC_JETTAGS/numTauTagsPer06Jet
+Title=Number of $\tau$ tags per $R=0.6$ jet
+XLabel=$N_{\tau\,\text{tag}}$
+# END PLOT
